# globus-ink-26

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: bridge-protocol.md  calibration-bench.md  globus-logic.md  protocol.md
ink/: ink.ino
ink/bringup/: bringup.ino
scripts/: ink.cmd  ink.sh
tsup/: bridge.py  calibrate_spin.py  config.py  force_spin.py  kinematics.py  link.py  main.py
tsup/tests/: test_bridge.py  test_kinematics.py  test_link.py  test_main.py
tsup/tui/: Cargo.toml  REUSE.toml
tsup/tui/assets/geo/: land_positions.gl  land_triangle_indices.gl
tsup/vzor/: Cargo.toml  build.rs
tsup/vzor/assets/geo/: land_contour_indices.gl
tsup/vzor/examples/: demo.rs
tsup/vzor/src/: bridge.rs  lib.rs  main.rs
