[package]
name = "vzor"
version = "0.1.0"
authors = ["d10n <david@bitinvert.com>", "Earthal Labs"]
edition = "2024"
rust-version = "1.94.0"
description = "Terminal UI for the Globus INK 25 replica, forked from tui-globe"
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["std"] }
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
crossterm = "0.29"
ratatui = { version = "0.30.0", default-features = false, features = ["std", "crossterm"] }

[build-dependencies]
zstd = { version = "0.13", default-features = false }

[lints.clippy]
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
borrow_as_ptr = "warn"
implicit_clone = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unused_async = "deny"
wildcard_dependencies = "deny"

[lints.rust]
explicit_outlives_requirements = "warn"
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
lto = true

